--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.1.0",
+    "outstatic": "^1.4.4",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.71.1"
