--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/blob": "^0.22.1",
     "next": "14.1.0",
     "outstatic": "^1.4.4",
     "react": "^18",
