--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,5 @@
 # REQUIRED Environment variables
-OST_GITHUB_ID=YOUR_GITHUB_OAUTH_OR_APPS_ID
-OST_GITHUB_SECRET=YOUR_GITHUB_OAUTH_OR_APPS_SECRET
-OST_REPO_SLUG=THE_REPOSITORY_SLUG
+OST_GITHUB_ID="72a5493bf0b05d25aeb0"
+OST_GITHUB_SECRET="1c26bf0c3ccbc2870dcb93781792578914b2d2c0"
+OST_REPO_OWNER="forkball"
+OST_REPO_SLUG="malone-the-chemist"
