Implement Contentful CMS

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,3 @@
-# REQUIRED Environment variables
-OST_GITHUB_ID="72a5493bf0b05d25aeb0"
-OST_GITHUB_SECRET="1c26bf0c3ccbc2870dcb93781792578914b2d2c0"
-OST_REPO_OWNER="forkball"
-OST_REPO_SLUG="malone-the-chemist"
+CONTENTFUL_SPACE_ID=<Replace with your Contentful Space ID>
+CONTENTFUL_ACCESS_TOKEN=<Replace with your Contentful access token>
+CONTENTFUL_PREVIEW_ACCESS_TOKEN=<Replace with your Contentful preview access token>
