Add dynamic image bg

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
-CONTENTFUL_SPACE_ID=<Replace with your Contentful Space ID>
-CONTENTFUL_ACCESS_TOKEN=<Replace with your Contentful access token>
-CONTENTFUL_PREVIEW_ACCESS_TOKEN=<Replace with your Contentful preview access token>
+CONTENTFUL_SPACE_ID=inrhvxpeuxn5
+CONTENTFUL_ACCESS_TOKEN=Lzo04gIdqFes-eycAhgZDivMZNbHYV4eOAqbkTs4T64
+CONTENTFUL_PREVIEW_ACCESS_TOKEN=hb-emQZZfESdDj8Ce6qGGAZjUuLQXfV-VD6fFR6xKDU
